--- a/project/package.json
+++ b/project/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "recharts": "^2.8.0",
